--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "@types/bcrypt": "^5.0.2",
+    "axios": "^1.7.0",
+    "bcrypt": "^5.1.1",
     "jose": "^5.3.0",
     "next": "14.2.3",
     "react": "^18",
