--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.17.3",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.0",
     "bcrypt": "^5.1.1",
@@ -21,6 +23,7 @@
     "jose": "^5.3.0",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
+    "primeicons": "^7.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
