--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.17.3",
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "axios": "^1.7.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.1",
     "jose": "^5.3.0",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
