--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^3.4.1",
     "@tanstack/react-table": "^8.17.3",
     "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
@@ -33,6 +34,8 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
+    "react-stripe-js": "^1.1.5",
+    "stripe": "^15.7.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0",
